@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-03T16:30:31Z",
-  "count_outdated" : 557,
-  "uniques_outdated" : 321,
-  "count" : 589,
+  "timestamp" : "2022-10-04T01:46:10Z",
+  "count_outdated" : 560,
+  "uniques_outdated" : 322,
+  "count" : 591,
   "uniques" : 338,
   "clones" : [
-    {
-      "timestamp": "2022-09-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-20T00:00:00Z",
       "count": 1,
